* V1.6.14x

* V1.6.14
  * forgot to add cfg module to setup.py (preferred to generate new version)

* V1.6.13
  * adding 'ck cmd test' to let users understand CK command line -
    it will just print input as JSON ...
  * adding input print when creating dummy module to help
    users understand command line
  * checking if CK directory exists when updating kernel
  * can now generate new UID when renaming entires (--new_uid)
    to avoid collecting experiments from multiple users 
    with the same UID ...
  * can now add UID to alias when renaming entries (--add_uid_to_alias)
    to distinguish some shared entries with common alias ...
  * if adding json via CMD (@@key) and string is empty,
    convert it to {} (empty dict) rather than failing.
    Also add missing {}.
  * removing extra \n when entering JSON from CMD ...
  * slightly improving Readme (adding our latest position paper 
    about CK from DATE'16)
  * fixing issue with 'read-only' files on Windows 
    when removing a given repo completely
  * fixing issue when installing repository manually downloaded
    from GitHub (removing root directory), see issue #46
  * checking if git command line client is installed 
    when pulling shared repo 
  * improving listing of all modules and actions
  * now you can add tags from CMD when adding/updating entries (ck add dataset:xyz --tags=abc)
  * improving ck.list_all_files (avoid recursive symbolic directories, add path if needed)
  * added --quiet mode when creating new modules (to simplify procedure)
  * fixing small buy when detecting latest CK version (works even if non-integer value)
  * added support to pack files with multiple pattern (useful to transfer new solutions
    via Internet when crowdsourcing experiments)
  * adding unzip_file function (to pack and exchange solutions when crowdsourcing experiments)
  * fixing a minor bug when updating entries (do not set data_name to default if already exists)