@@ -1,4 +1,6 @@
 * V1.6.14x
+  * adding mode to skip tmp files/directories when downloading entry
+  * fixing bug in entry downloader
 
 * V1.6.14
   * forgot to add cfg module to setup.py (preferred to generate new version)
